welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: not found: value lm
var litMessage() = lm
                   ^BDRBuggle:6: error: not found: value litMessage
var litMessage() = lm
    ^BDRBuggle:7: error: not found: value lm
if (lm="R") 
    ^BDRBuggle:9: error: not found: value lm
if (lm="L")
    ^BDRBuggle:11: error: not found: value lm
if (lm="I")
    ^BDRBuggle:13: error: not found: value lm
if (lm="A")
    ^BDRBuggle:15: error: not found: value lm
if (lm="B")
    ^BDRBuggle:17: error: not found: value lm
if (lm="C")
    ^BDRBuggle:19: error: not found: value lm
if (lm="Z")
    ^BDRBuggle:21: error: not found: value lm
if (lm="Y")
    ^BDRBuggle:23: error: not found: value lm
if (lm="X")
    ^